--- a/styles.css
+++ b/styles.css
@@ -21,26 +21,45 @@ a:hover {
 a {
     text-decoration: none;
 }
-span{
-    color:red;
+
+span {
+    color: red;
     font-weight: 700;
 }
-.boxes{
+
+.boxes {
     margin: 3px;
     padding: 4;
-    border-style: solid; 
+    border-style: solid;
     border-color: black;
     border-radius: 30px;
     width: 30em;
+    display:block;
 }
-#box1{
+
+#box1 {
     background-color: lightblue;
 }
-#box2
-{background-color: lightcoral;}
-#box3{ 
+
+#box2 {
+    background-color: lightcoral;
+   
+}
+
+#box3 {
     background-color: lightgreen;
 }
-#box4{
+
+#box4 {
     background-color: lightseagreen;
+}
+.image{
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    background-color: lightyellow;
+    position: absolute;
+    right:100px;
+    left:100px;
+    
 }
